--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Bootstrap v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -18,7 +12,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #6585ee;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -8149,10 +8143,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #deb196; }
+  color: var(--primary); }
   a:hover, a:focus {
     text-decoration: none;
-    color: #deb196;
+    color: var(--primary);
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8162,7 +8156,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #deb196 !important; }
+  color: var(--primary) !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8220,7 +8214,7 @@ h1, h2, h3, h4, h5,
         height: 2px;
         bottom: 0;
         left: 0;
-        background: #deb196;
+        background: var(--primary);
         visibility: visible;
         -webkit-transform: scaleX(0);
         -moz-transform: scaleX(0);
@@ -8248,12 +8242,12 @@ h1, h2, h3, h4, h5,
         color : #212529; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color : #212529;
-    border: 1px solid #deb196;
+    border: 1px solid var(--primary);
     padding-top: .7rem;
     padding-bottom: .7rem;
     padding-left: 18px;
     padding-right: 18px;
-    background: #deb196;
+    background: var(--primary);
     margin-top: 0;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -8263,15 +8257,15 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color : #212529; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #deb196;
-      border: 1px solid #deb196; }
+      background: var(--primary);
+      border: 1px solid var(--primary); }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
     border: 1px solid #a0f669;
     background: #a0f669 !important; }
   .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
     background: transparent;
     background: none;
-    color: #deb196; }
+    color: var(--primary); }
     .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
       visibility: visible;
       -webkit-transform: scaleX(1);
@@ -8279,7 +8273,7 @@ h1, h2, h3, h4, h5,
       transform: scaleX(1); }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #deb196; } }
+      color: var(--primary); } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8290,7 +8284,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #deb196;
+      color: var(--primary);
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8310,10 +8304,10 @@ h1, h2, h3, h4, h5,
           padding-right: 0 !important;
           padding-bottom: 20px !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #deb196 !important; }
+      color: var(--primary) !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color : #212529 !important;
-      background: #deb196;
+      background: var(--primary);
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -8328,7 +8322,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color : #212529 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #deb196; }
+      border-color: var(--primary); }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8347,7 +8341,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light.scrolled .nav-link {
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #deb196 !important; }
+        color: var(--primary) !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8517,10 +8511,10 @@ h1, h2, h3, h4, h5,
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
           color: #000000;
           font-weight: 600;
-          font-size: 14px;
+          font-size: 17px;
           letter-spacing: 3px;
           text-transform: uppercase;
-          color: #deb196; }
+          color: var(--primary); }
         .owl-carousel.home-slider .slider-item .slider-text .text {
           position: relative;
           z-index: 1; }
@@ -8531,7 +8525,7 @@ h1, h2, h3, h4, h5,
           font-weight: 800; }
           .owl-carousel.home-slider .slider-item .slider-text h1 span {
             font-weight: 800;
-            color: #deb196; }
+            color: var(--primary); }
           @media (max-width: 991.98px) {
             .owl-carousel.home-slider .slider-item .slider-text h1 {
               color : #212529;
@@ -8553,7 +8547,7 @@ h1, h2, h3, h4, h5,
               color: rgba(255, 255, 255, 0.7);
               font-size: 23px; } }
         .owl-carousel.home-slider .slider-item .slider-text .btn-custom {
-          bordeR: 1px solid #deb196;
+          bordeR: 1px solid var(--primary);
           padding: 5px 20px;
           text-transform: uppercase;
           font-size: 12px;
@@ -8596,7 +8590,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-prev:hover span:before, .owl-carousel.home-slider .owl-nav .owl-prev:focus span:before {
             font-size: 20px;
             margin-top: 7px;
-            color: #deb196; }
+            color: var(--primary); }
       .owl-carousel.home-slider .owl-nav .owl-next {
         top: 0 !important;
         right: 0 !important; }
@@ -8609,7 +8603,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-next:hover span:before, .owl-carousel.home-slider .owl-nav .owl-next:focus span:before {
             font-size: 24px;
             margin-top: 7px;
-            color: #deb196; }
+            color: var(--primary); }
     .owl-carousel.home-slider .owl-dots {
       position: absolute;
       left: 0;
@@ -8678,9 +8672,9 @@ h1, h2, h3, h4, h5,
     .slider-text .breadcrumbs span a {
       color: rgba(255, 255, 255, 0.8); }
       .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-        color: #deb196; }
+        color: var(--primary); }
         .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-          color: #deb196; }
+          color: var(--primary); }
 
 .slider-text .bread {
   font-weight: 700;
@@ -8694,7 +8688,7 @@ h1, h2, h3, h4, h5,
   background: #191919 !important; }
 
 .bg-primary {
-  background: #deb196; }
+  background: var(--primary); }
 
 .btn {
   cursor: pointer;
@@ -8712,20 +8706,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #deb196;
-    border: 1px solid #deb196 !important;
+    background: var(--primary);
+    border: 1px solid var(--primary) !important;
     color: #000000 !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #deb196 !important;
-      background: #deb196 !important;
+      border: 1px solid var(--primary) !important;
+      background: var(--primary) !important;
       color: #000000 !important; }
     .btn.btn-primary.btn-outline-primary {
-      border: 2px solid #deb196 !important;
+      border: 2px solid var(--primary) !important;
       background: transparent !important;
-      color: #deb196 !important; }
+      color: var(--primary) !important; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 2px solid transparent !important;
-        background: #deb196 !important;
+        background: var(--primary) !important;
         color : #212529 !important; }
   .btn.btn-secondary {
     background: #a0f669 !important;
@@ -8757,11 +8751,11 @@ h1, h2, h3, h4, h5,
       color : white !important; }
       .btn.btn-white.btn-outline-white:hover {
         border: 1px solid transparent;
-        background: #deb196;
+        background: var(--primary);
         color : #212529; }
 
 .ftco-about .img-about {
-  width: 100%;
+  width: 80%;
   z-index: 0;
   position: relative; }
   .ftco-about .img-about .img {
@@ -8792,7 +8786,7 @@ h1, h2, h3, h4, h5,
     color : #212529; }
   .ftco-about .counter-wrap .text p span.number {
     font-weight: 600;
-    color: #deb196; }
+    color: var(--primary); }
 
 .resume-wrap {
   width: 100%;
@@ -8806,7 +8800,7 @@ h1, h2, h3, h4, h5,
   .resume-wrap .date {
     font-weight: 900;
     font-size: 26px;
-    color: #deb196; }
+    color: var(--primary); }
   .resume-wrap h2 {
     font-size: 26px; }
   .resume-wrap .position {
@@ -8829,7 +8823,7 @@ h1, h2, h3, h4, h5,
     .services-1 .icon i {
       font-size: 60px;
       line-height: 1.0;
-      color: #deb196; }
+      color: var(--primary); }
   .services-1 .desc h3 {
     line-height: 1.3;
     font-size: 13px;
@@ -8846,7 +8840,7 @@ h1, h2, h3, h4, h5,
       content: '';
       width: 30px;
       height: 1px;
-      background: #deb196;
+      background: var(--primary);
       margin: 0 auto; }
     .services-1 .desc h3 a {
       color : #212529; }
@@ -8859,9 +8853,9 @@ h1, h2, h3, h4, h5,
     text-transform: uppercase;
     font-size: 12px;
     margin-bottom: 10px;
-    color: #deb196; }
+    color: var(--primary); }
   .services-1:hover {
-    background: #deb196; }
+    background: var(--primary); }
     .services-1:hover .icon i {
       color : #212529; }
     .services-1:hover h3 {
@@ -8885,7 +8879,7 @@ h1, h2, h3, h4, h5,
   overflow: visible; }
 
 .progress-bar {
-  background: #deb196;
+  background: var(--primary);
   -webkit-box-shadow: none;
   box-shadow: none;
   font-size: 12px;
@@ -8905,7 +8899,7 @@ h1, h2, h3, h4, h5,
     width: 34px;
     height: 34px;
     content: '';
-    background: #deb196;
+    background: var(--primary);
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
@@ -8920,14 +8914,17 @@ h1, h2, h3, h4, h5,
     color : #212529; }
 
 .ftco-hireme {
-  background: #deb196;
+  background: var(--primary);
   z-index: -1; }
   .ftco-hireme h2 {
-    color : #212529;
+    color : white;
     font-size: 40px;
     font-weight: 900; }
     .ftco-hireme h2 span {
-      color: #deb196; }
+      color: var(--primary); }
+  .ftco-hireme p{
+    color:white;
+  }
 
 @media (min-width: 992px) {
   .margin-top {
@@ -8970,7 +8967,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #deb196;
+    background: var(--primary);
     z-index: -1;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -9053,7 +9050,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #deb196 !important; }
+  background: var(--primary) !important; }
 
 .about-author {
   -webkit-border-radius: 5px;
@@ -9148,12 +9145,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #deb196; }
+      color: var(--primary); }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #deb196; }
+    color: var(--primary); }
 
 #map {
   width: 100%; }
@@ -9271,7 +9268,7 @@ textarea.form-control {
 .ftco-counter .text strong.number {
   font-weight: 700;
   font-size: 30px;
-  color: #deb196;
+  color: var(--primary);
   display: block; }
 
 .ftco-counter .text span {
@@ -9287,7 +9284,7 @@ textarea.form-control {
   display: block;
   font-size: 72px;
   font-weight: bold;
-  color: #deb196; }
+  color: var(--primary); }
 
 .ftco-counter .ftco-label {
   font-size: 12px;
@@ -9322,7 +9319,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color : #212529; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #deb196; }
+          color: var(--primary); }
   .blog-entry .meta {
     display: inline-block;
     margin-right: 5px;
@@ -9331,11 +9328,11 @@ textarea.form-control {
     text-transform: uppercase;
     letter-spacing: 2px; }
     .blog-entry .meta span {
-      color: #deb196; }
+      color: var(--primary); }
     .blog-entry .meta a {
-      color: #deb196; }
+      color: var(--primary); }
       .blog-entry .meta a:hover {
-        color: #deb196; }
+        color: var(--primary); }
 
 .block-23 ul {
   padding: 0; }
@@ -9404,7 +9401,7 @@ textarea.form-control {
     -ms-border-radius: 50%;
     border-radius: 1%; }
     .contact-section .box .icon span {
-      color: #deb196;
+      color: var(--primary);
       font-size: 30px; }
   .contact-section .box h3 {
     font-size: 17px;
@@ -9455,7 +9452,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color : #212529; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #deb196; }
+        color: var(--primary); }
   .block-21 .text .meta > div {
     display: inline-block;
     margin-right: 5px; }
@@ -9527,7 +9524,7 @@ textarea.form-control {
         font-size: 13px;
         letter-spacing: .1em;
         color: rgba(255, 255, 255, 0.3);
-        color: #deb196;
+        color: var(--primary);
         font-weight: 600;
         margin-bottom: 20px; }
       .comment-list li .comment-body .reply {
@@ -9592,7 +9589,7 @@ textarea.form-control {
         top: 0;
         color: #ccc; }
       .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
-        color: #deb196; }
+        color: var(--primary); }
     .categories li.active a, .sidelink li.active a {
       color: #000000;
       font-style: italic; }
